--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "scripts": {
     "start": "parcel src/index.html",
+    "start_p": "parcel src_plain/index.html --https",
     "start_r": "parcel src_plain/receive.html",
-    "start_a": "parcel src_plain/* --https",
+    "start_a": "parcel src_plain/test.html --https ",
     "build": "parcel build src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,9 +18,11 @@
   "author": "Florian Rappl",
   "license": "MIT",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-react-app": "^3.1.2",
     "peerjs": "^1.3.2",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0"
   },
